force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/SproutSocialApp__Sprout_Social_Post__c.object-meta.xml
<CustomObject>
    <label>Sprout Social Post</label>
    <nameField>
        <label>Sprout Social Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprout Social Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>