force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>