force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>