force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Content__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>