force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Content_Truncated__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Content_Truncated__c</fullName>
    <description>A truncated (no more than 255 characters) version of the “Content” field</description>
    <inlineHelpText>This field shortens the “Content” field to 255 characters. See the “Content” field for full details</inlineHelpText>
    <label>Content Truncated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>