force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Customer_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Customer_Profile_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>