force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Customer_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Customer_Profile_Name__c</fullName>
    <label>Customer Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>