force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__ExternalPostId__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__ExternalPostId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Post Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>