force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__IsOutbound__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__IsOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outbound</label>
    <type>Checkbox</type>
</CustomField>