force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Language__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>