force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__MediaType__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__MediaType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>