force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__PostTags__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__PostTags__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Tags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>