force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__R6PostId__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__R6PostId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Post Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>