force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Recipient__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Recipient__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>