force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__ReplyToId__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__ReplyToId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>In Reply To</label>
    <referenceTo>SproutSocialApp__Sprout_Social_Post__c</referenceTo>
    <relationshipLabel>Sprout Social Posts</relationshipLabel>
    <relationshipName>Sprout_Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>