force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__ReviewScale__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__ReviewScale__c</fullName>
    <label>Review Scale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>