force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Sentiment__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>