force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/SproutSocialApp__Sprout_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Sprout_Message_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sprout Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>