force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/fields/Status_Case__c.field-meta.xml
<CustomField>
    <fullName>Status_Case__c</fullName>
    <formula>TEXT(SproutSocialApp__ParentId__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Case</label>
    <type>Text</type>
</CustomField>