force-app/main/default/objects/SproutSocialApp__Sprout_Social_Post__c/listViews/Instagram.listView-meta.xml
<ListView>
    <fullName>Instagram</fullName>
    <columns>NAME</columns>
    <columns>SproutSocialApp__PersonaId__c</columns>
    <columns>SproutSocialApp__Content__c</columns>
    <columns>SproutSocialApp__Message_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SproutSocialApp__Sprout_Message_Type__c</columns>
    <columns>SproutSocialApp__ParentId__c</columns>
    <columns>Status_Case__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SproutSocialApp__Provider__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SproutSocialApp__Provider__c</field>
        <operation>equals</operation>
        <value>Instagram</value>
    </filters>
    <label>Instagram</label>
</ListView>